# HaskellMachineLearning

./: .uuid  Bezier.hs  ChartUtils.hs  EnergyCostDataset.hs  LAB01Regressions.hs  LevmarOptimizer.hs  Loss.hs  MachineLearningLabs.cabal  Regressions.hs  SplineApproximation.hs  _ChartUtils.hsplay  _LAB01Regressions.hsplay  _LevmarOptimizer.hsplay  _SplineApproximation.hsplay
