name: MachineLearningLabs
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    SourceSansPro_RB.svg
    SourceSansPro_R.svg
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable MachineLearningLabs
  main-is: LAB01Regressions.hs
  buildable: True
  build-depends:
      diagrams-rasterific -any,
      SVGFonts -any,
      Chart-diagrams -any,
      vector -any,
      base -any,
      levmar -any,
      diagrams-lib -any,
      JuicyPixels -any,
      Chart -any
  default-language: Haskell2010
  other-modules:
      LevmarOptimizer
      EnergyCostDataset
      ChartUtils
