name: MachineLearningLabs
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    SourceSansPro_RB.svg
    SourceSansPro_R.svg
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable MachineLearningLabs
  main-is: Regressions.hs
  buildable: True
  build-depends:
      diagrams-rasterific -any,
      smoothie -any,
      SVGFonts -any,
      vector -any,
      diagrams-lib -any,
      vector-space -any,
      JuicyPixels -any,
      containers -any,
      Chart-diagrams -any,
      base -any,
      cubicspline -any,
      levmar -any,
      Chart -any
  default-language: Haskell2010
  other-modules:
      SplineApproximation
      EnergyCostDataset
      ChartUtils
      LevmarOptimizer
      Bezier
      Loss
